// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.workspace.source.codegen;

option go_package = "namespacelabs.dev/foundation/workspace/source/codegen";

import "schema/schema.proto";
import "workspace/source/protos/filedescset.proto";

message OpGenNode {
    foundation.schema.Node node = 1;
    foundation.workspace.source.protos.FileDescriptorSetAndDeps protos = 2;
}